feat: Enhance job management with timeout and scheduling options, add worker daemon commands, and implement logging